[feature] make verification code length configurable with safe clamping
Introduce configurable verification code length with a clamped range of 2-16 characters. Update code generation logic, runtime settings, and configuration file. Add validation and robust handling for invalid lengths. Extend tests to cover new functionality.